# paper_ocr

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: data_layout_contract.md  literature_dataset_processing_roadmap.md  structured_digital_extraction.md  table_extraction_fix_backlog_execution_plan.md  table_extraction_pipeline.md  table_fix_backlog_gates.json  table_qa_metrics.md
docs/schemas/: property_record.schema.json
src/paper_ocr/: __init__.py  anchoring.py  bibliography.py  cli.py  client.py  data_audit.py  discoverability.py  doi_resolution.py  facts.py  ingest.py  inspect.py  postprocess.py  render.py  schemas.py  scihub.py  store.py  structured_data.py  structured_extract.py  table_cell_ocr_experiment.py  table_context.py  table_eval.py  table_rectifier.py  table_structure.py  table_validation.py  telegram_fetch.py  test_selection.py
src/paper_ocr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_bibliography.py  test_cli.py  test_client.py  test_data_audit.py  test_discoverability.py  test_doi_resolution.py  test_eval_table_pipeline.py  test_facts.py  test_ingest.py  test_inspect.py  test_postprocess.py  test_scihub.py  test_store.py  test_structured_data.py  test_structured_extract.py  test_table_cell_ocr_experiment.py  test_table_context.py  test_table_rectifier.py  test_table_structure.py  test_table_validation.py  test_telegram_fetch.py  test_test_selection.py
tests/fixtures/table_eval/: baseline.json
tests/fixtures/table_eval/gold/: tables.jsonl
